--- a/chaturaji-android-app-it/pom.xml
+++ b/chaturaji-android-app-it/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <skip-android-it>true</skip-android-it>
+        <tested.project.dir>${project.basedir}../chaturaji-android-app</tested.project.dir>
     </properties>
 
     <dependencies>
@@ -52,6 +53,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- coverage -->
+        <dependency>
+            <groupId>emma</groupId>
+            <artifactId>emma</artifactId>
+            <type>jar</type>
+            <scope>compile</scope>
+            <version>2.1.5320</version>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -71,22 +81,46 @@
                 <artifactId>android-maven-plugin</artifactId>
                 <configuration>
                     <test>
+                        <!-- Run test with flag "-w coverage true" this is need for generate coverage.ec file, result file-->
                         <skip>${skip-android-it}</skip>
                         <coverage>true</coverage>
                         <createReport>true</createReport>
-                        <!--<instrumentationPackage>packageName</instrumentationPackage> -->
-                        <!--<instrumentationRunner>className</instrumentationRunner> -->
-                        <!--<debug>true|false</debug> -->
-                        <!-- <classes>
-                            <class>your.package.name.YourTestClass</class>
-                        </classes> -->
-                        <!-- <packages>
-                            <package>your.package.name</package>
-                        </packages> -->
                     </test>
                 </configuration>
                 <extensions>true</extensions>
+                <!-- need for pull coverage.ec file and move to tested project-->
+                <!--<executions>-->
+                <!--<execution>-->
+                <!--<id>pull-coverage</id>-->
+                <!--<phase>post-integration-test</phase>-->
+                <!--<goals>-->
+                <!--<goal>pull</goal>-->
+                <!--</goals>-->
+                <!--<configuration>-->
+                <!--<pullSource>/data/data/com.example.android.apis/files/coverage.ec</pullSource>-->
+                <!--<pullDestination>${tested.project.dir}/target/emma/coverage.ec</pullDestination>-->
+                <!--</configuration>-->
+                <!--</execution>-->
+                <!--</executions>-->
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <!-- Plugin for generate report - if you want use sonar you could skip this raport plugin -->
+                <groupId>org.sonatype.maven.plugin</groupId>
+                <artifactId>emma4it-maven-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <metadatas>${tested.project.dir}/target/emma/coverage.em,${tested.project.dir}/src/</metadatas>
+                    <instrumentations>${tested.project.dir}/target/emma/coverage.ec</instrumentations>
+                    <reportDirectory>${tested.project.dir}/target/emma/</reportDirectory>
+                    <baseDirectory>${tested.project.dir}/target/</baseDirectory>
+                    <formats>xml,html</formats>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
